# UDC-Prog2

./: README.md
P1/: CMakeLists.txt  config.cmake  dynamic_list.c  dynamic_list.h  main  main.c  main2.c  script.sh  static_list.c  static_list.h
P1/list/: list.h
P1/script_minimos/: illegalize1.txt  illegalize1_Dynamic.txt  illegalize2_Dynamic.txt  illegalize2_Static.txt  illegalize2_ref.txt  new.txt  new_Dynamic.txt  vote_Dynamic.txt
